--- a/A01_RandomPoem/index.html
+++ b/A01_RandomPoem/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Poem</title>
-    <script src="script.ts"></script>
+    <script src="script.js"></script>
 </head>
 <body>
     <p>Öffne bitte die Konsole mit F12 oder command + option + C</p>
